# moutyque-Counter_server

./: README.md  fighter_server.spec  pyproject.toml
app/: main.py  run_server.py
app/static/css/: dashboard.css
app/static/js/: dashboard.js
app/templates/: dashboard.html
